# monorepo

./: .gitignore  .pre-commit-config.yaml  README.md  video_deletion_system_diagram.md
backend/: .env  .env.example  README.md  check_database_status.py  cli.py  embedding_service.py  main.py  pinecone_connect.py  pyproject.toml  requirements.txt  search_service.py  test_deletion_api.py
backend/.hypothesis/constants/: 129f507e0eaeb4da  18688e9aa1f2c7f8  21c135e34a286ea5  5793b557bf5fdf71  5fef636b43d3c724  63c60979cff5a2ab  6b9e7fcdb11a5bab  77aeb1da35712a02  86277d1368b4361c  8b47064e59a5697c  8fc37b0bb74e6c53  ab402938645e786c  b89fd3e609f279f0  ec2f21938dc62527  fb754a62878769e5
backend/.hypothesis/tmp/: tmp1_vw8ftf  tmp3iajxgco  tmp3iataqvy  tmp_g1f3w7b  tmphzcbrjza  tmpmma9w6wd  tmporp605e4  tmpqqw0dmun  tmpszghhvsm  tmpu4utmznn  tmpvo3s4_tm  tmpw1qf2d2p  tmpzgrpbbx2
backend/api/: __init__.py  fastapi_router.py  search_fastapi_router.py  server_fastapi_router.py
backend/apps/: __init__.py  dev_combined.py  processing_app.py  search_app.py  server.py
backend/auth/: .firebaserc  README.md  __init__.py  auth_connector.py
backend/background_tasks/: tasks.py
backend/cache/: video_cache.py
backend/database/: README.md  __init__.py  chunk_faces_connector.py  deletion_service.py  functions.py  index_file_connector.py  job_store_connector.py  pinecone_connector.py  r2_connector.py  url_cache_connector.py
backend/database/cache/: __init__.py  job_store_connector.py  url_cache_connector.py
backend/database/firebase/: __init__.py  firebase_connector.py  user_store_connector.py
backend/embeddings/: __init__.py  embedder.py  frame_embedder.py  video_embedder.py
backend/face_recognition/: __init__.py  face.py  face_appearance_repository.py  face_detector.py  face_metadata_repository.py  face_repository.py  frame_face_pipeline.py  recent_faces_cache.py  video_face_pipeline.py
backend/face_recognition/test/: face_recognition_test.py  video_test.py
backend/models/: __init__.py  metadata.py
backend/preprocessing/: __init__.py  chunker.py  compressor.py  frame_extractor.py  preprocessor.py
backend/search/: __init__.py  embedder.py  searcher.py  text_embedder.py
backend/services/: __init__.py  http_server.py  processing.py  processing_service.py  search.py  search_service.py  upload.py  upload_handler.py
backend/shared/: __init__.py  config.py  images.py  processing_service.py  search_service.py  server_service.py
backend/tests/: README.md  conftest.py  test_pinecone_connect.py  test_search_service.py
backend/tests/integration/: test_api_endpoints.py  test_auth_endpoints.py  test_auth_flow.py  test_deletion_endpoint.py  test_frame_face_pipeline_integration.py  test_job_store_connector.py  test_pipeline.py  (+3 more)
backend/workers/: __init__.py  processing_worker.py  search_worker.py  server_worker.py
(+136 files in other folders)
