[project]
name = "clipabit-backend"
version = "0.0.1"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]",
    "python-multipart",
    "python-dotenv",
    "ffmpeg-python",
    "opencv-python-headless",
    "numpy",
    "modal",
    "pinecone",
    "torch",
    "pillow",
    "transformers",
    "scenedetect",
    "boto3",
]

[dependency-groups]
dev = [
    "opencv-python", 
]
