[project]
name = "clipabit-backend"
version = "0.0.1"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]",
    "python-multipart",
    "python-dotenv",
    "ffmpeg-python",
    "opencv-python-headless",
    "numpy",
    "modal",
    "pinecone",
    "torch",
    "pillow",
    "transformers",
    "scenedetect",
    "boto3",
]

[dependency-groups]
dev = [
    "opencv-python",
    "pytest",
    "pytest-cov",
    "pytest-mock",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
python_files = ["test_*.py"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["preprocessing", "database", "models", "embeddings"]
omit = ["tests/*", "utils/*", "*/conftest.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
precision = 2
